bugfix: background overflow

--- a/src/App.css
+++ b/src/App.css
@@ -16,34 +16,29 @@
   background-attachment: fixed;
   background-size: cover;
   height: 100vh;
+  overflow: hidden;
 }
 
 .color1 {
   background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
-  border: 1px solid white;
 }
 
 .color2 {
   background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
-  border: 1px solid white;
 }
 
 .color3 {
   background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
-  border: 1px solid white;
 }
 
 .color4 {
   background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
-  border: 1px solid white;
 }
 
 .color5 {
   background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
-  border: 1px solid white;
 }
 
 .color6 {
   background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-  border: 1px solid white;
 }
